# rhodes-os

./: Cargo.toml  README.md
.cargo/: config
.github/workflows/: rust.yml
src/: lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs
