[package]
name = "rhodes_os"
version = "0.1.0"
authors = ["jasondemps1 <jasondemps1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.3"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.11.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33   # (0x10 << 1) | 1

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
